--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "since 2017-06"
   ],
   "dependencies": {
+    "@vime/react": "^5.0.27",
     "autoprefixer": "^10.2.5",
     "axios": "^0.21.1",
     "moment": "^2.29.1",
