--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "since 2017-06"
   ],
   "dependencies": {
-    "@vime/react": "^5.0.27",
     "autoprefixer": "^10.2.5",
     "axios": "^0.21.1",
     "postcss": "^8.2.9",
@@ -40,6 +39,7 @@
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
+    "prop-types": "^15.7.2",
     "vite": "^2.1.5"
   },
   "lint-staged": {
