--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "autoprefixer": "^10.2.5",
     "axios": "^0.21.1",
+    "emailjs-com": "^2.6.4",
     "postcss": "^8.2.9",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
